--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
     "description": "REST API for workout tracking",
     "main": "server.js",
     "scripts": {
-        "start": "node server.js",
-        "dev": "nodemon server.js",
-        "migrate": "npx prisma migrate dev",
-        "seed": "npx prisma db seed",
-        "studio": "npx prisma studio"
-    },
+          "start": "node server.js",
+          "dev": "nodemon server.js",
+          "build": "npx prisma generate",
+          "postinstall": "npx prisma generate",
+          "deploy": "npx prisma migrate deploy"
+        },
     "dependencies": {
         "@prisma/client": "^6.10.1",
         "cors": "^2.8.5",
