--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "REST API for workout tracking",
     "main": "server.js",
     "scripts": {
-          "start": "npx prisma migrate deploy && node server.js",
+          "start": "npx prisma db push && node server.js",
           "dev": "nodemon server.js",
           "build": "npx prisma generate",
           "postinstall": "npx prisma generate",
