--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
-    "name": "workout-tracker-api",
-    "version": "1.0.0",
-    "description": "REST API for workout tracking",
-    "main": "server.js",
-    "scripts": {
-          "start": "npx prisma db push && node server.js",
-          "dev": "nodemon server.js",
-          "build": "npx prisma generate",
-          "postinstall": "npx prisma generate",
-          "deploy": "npx prisma migrate deploy"
-        },
-    "dependencies": {
-        "@prisma/client": "^6.10.1",
-        "cors": "^2.8.5",
-        "dotenv": "^16.0.3",
-        "express": "^4.18.2"
-    },
-    "devDependencies": {
-        "nodemon": "^3.1.10",
-        "prisma": "^6.10.1"
-    },
-    "prisma": {
-        "seed": "node prisma/seed.js"
-    }
+  "name": "workout-tracker-api",
+  "version": "1.0.0",
+  "description": "REST API for workout tracking",
+  "main": "server.js",
+  "scripts": {
+    "start": "npx prisma db push && node server.js",
+    "dev": "nodemon server.js",
+    "build": "npx prisma generate",
+    "postinstall": "npx prisma generate",
+    "deploy": "npx prisma migrate deploy"
+  },
+  "dependencies": {
+    "@prisma/client": "^6.10.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "expo": "^53.0.15",
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10",
+    "prisma": "^6.10.1"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  }
 }
