--- a/WorkoutTracker/app.json
+++ b/WorkoutTracker/app.json
@@ -1,11 +1,11 @@
 {
   "expo": {
-    "name": "WorkoutTracker",
-    "slug": "WorkoutTracker",
+    "name": "Atlas",
+    "slug": "Atlas",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "workouttracker",
+    "scheme": "atlas",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
