--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@prisma/client": "^6.10.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "expo": "^53.0.20",
     "express": "^4.18.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.10",
-    "prisma": "^6.10.1"
+    "prisma": "^6.10.1",
+    "typescript": "~5.8.3",
+    "@types/react": "~19.0.10"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
